--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-/* CSS Styling */
+/* Global Styles */
 body {
     font-family: 'Arial', sans-serif;
     background-color: #1c1c1c;
@@ -42,6 +42,7 @@ a:hover {
     color: darkorchid;
 }
 
+/* Layout Styles */
 .container {
     width: 70%;
     margin: auto;
@@ -59,14 +60,14 @@ a:hover {
 #canvas-container {
     display: block;
     width: 100%;
-    height: 480px;
+    height: 400px;
     border: 2px dashed #5d5a5a;
     margin: auto;
 }
 
+/* Animation Keyframes */
 @keyframes jump {
-    0%,
-    100% {
+    0%, 100% {
         transform: translateY(0);
     }
     50% {
@@ -74,6 +75,7 @@ a:hover {
     }
 }
 
+/* Animated Text */
 .animated-text {
     font-size: larger;
     display: inline-block;
@@ -86,6 +88,7 @@ a:hover {
     animation-delay: calc(0.1s * var(--i));
 }
 
+/* Footer Styles */
 footer {
     background-color: #333;
     padding: 10px;
@@ -96,6 +99,7 @@ footer {
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
 }
 
+/* Contact Info Styles */
 .contact-info {
     display: flex;
     gap: 20px; /* Space between icons */
@@ -130,13 +134,13 @@ footer {
     transform: scale(1.1);
 }
 
+/* Side Navigation Styles */
 .side-nav {
     position: fixed;
     right: 0;
     top: 50%;
     z-index: 1;
     text-align: right;
-   
 }
 
 .side-nav p {
@@ -156,7 +160,6 @@ footer {
     border-top: 1px solid #555;
     transform: scale(1.3);
     box-shadow: 0 5px #9b7aff;
-    z-index: 2;
 }
 
 /* Responsive Design */
@@ -176,7 +179,7 @@ footer {
     }
 }
 
-/* Extra small screens */
+/* Extra Small Screens */
 @media (max-width: 480px) {
     .container {
         padding: 0;
@@ -187,6 +190,7 @@ footer {
     }
 }
 
+/* Skills Container */
 .skills-container {
     display: flex;
     flex-wrap: wrap;
@@ -207,7 +211,6 @@ footer {
 
 .skill-card:hover {
     transform: scale(1.1);
-
 }
 
 .skill-icon {
@@ -229,4 +232,3 @@ footer {
 .skill-card:hover .skill-name {
     opacity: 1; 
 }
-
