--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,7 @@ body {
     padding: 0;
 }
 
+/* Typography */
 h1 {
     font-size: 3rem;
 }
@@ -30,12 +31,14 @@ h5 {
 p {
     font-size: 1.5rem;
     line-height: 1.5;
-    margin: 0 0 1em 0;
+    margin: 0 0 1em;
 }
 
+/* Links */
 a {
     text-decoration: none;
     color: whitesmoke;
+    transition: color 0.3s ease; /* Adding transition for smoother hover effect */
 }
 
 a:hover {
@@ -47,14 +50,6 @@ a:hover {
     width: 70%;
     margin: auto;
     padding: 20px;
-}
-
-.d-flex {
-    display: flex;
-}
-
-.d-none {
-    display: none;
 }
 
 #canvas-container {
@@ -113,9 +108,9 @@ footer {
 
 .contact-info a {
     display: flex;
-    transition: color 0.3s ease;
     padding: 5px;
     align-items: center;
+    transition: color 0.3s ease; /* Adding transition for smoother hover effect */
 }
 
 .contact-info a:hover {
@@ -144,7 +139,7 @@ footer {
 }
 
 .side-nav p {
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     font-weight: bold;
     margin-bottom: 10px;
     background-color: #333;
@@ -173,13 +168,8 @@ footer {
         align-items: center;
     }
 
-    .contact-info {
-        flex-direction: column;
-        gap: 5px;
-    }
 }
 
-/* Extra Small Screens */
 @media (max-width: 480px) {
     .container {
         padding: 0;
@@ -209,8 +199,9 @@ footer {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.skill-card:hover {
-    transform: scale(1.1);
+.skill-card:hover, 
+.skill-card.pulsating  {
+    transform: scale(1.3);
 }
 
 .skill-icon {
@@ -231,4 +222,32 @@ footer {
 
 .skill-card:hover .skill-name {
     opacity: 1; 
+}
+
+.skill-card.pulsating .skill-name {
+    animation: fade 3s infinite;
+}
+
+@keyframes fade {
+    0%, 100% {
+        opacity: 0; 
+    }
+    50% {
+        opacity: 1; 
+    }
+}
+
+@keyframes pulsate {
+    0%, 100% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.3);
+    }
+}
+
+/* Pulsating Class */
+.pulsating {
+    animation: pulsate 3s ease-in-out infinite;
+    transition: none;
 }
