--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,7 +29,7 @@ h5 {
 }
 
 p {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     line-height: 1.5;
     margin: 0 0 1em;
 }
@@ -133,24 +133,50 @@ footer {
 .side-nav {
     position: fixed;
     right: 0;
-    top: 50%;
+    top: 45%;
+    z-index: 1;
+    display: flex; 
+    flex-direction: column;
+}
+
+.side-nav img {
+    height: 60px; 
+    width: 60px; 
+    margin-bottom: 15px;
+    background-color: #333;
+    padding: 10px 50px;
+    border-radius: 20px 0 0 20px;
+    transition: transform 0.2s ease-out, background-color 0.3s ease; 
+    transform-origin: right center; 
+}
+
+.side-nav img:hover {
+    color: #9b7aff;
+    border-top: 1px solid #555;
+    transform: scale(1.3);
+    box-shadow: 0 5px #9b7aff;
+}
+
+.side-nav-left {
+    position: fixed;
+    left: 0;
+    top: 10%;
     z-index: 1;
     text-align: right;
 }
 
-.side-nav p {
+.side-nav-left p {
     font-size: 2.25rem;
     font-weight: bold;
     margin-bottom: 10px;
     background-color: #333;
     padding: 10px 20px;
-    border-radius: 20px 0 0 20px;
+    border-radius: 0 20px 20px 0;
     transition: transform 0.2s ease-out, background-color 0.3s ease; 
-    transform-origin: right center; 
-    max-width: calc(100vw - 20px); 
+    transform-origin: left center; 
 }
 
-.side-nav p:hover {
+.side-nav-left p:hover {
     color: #9b7aff;
     border-top: 1px solid #555;
     transform: scale(1.3);
@@ -190,8 +216,8 @@ footer {
 
 .skill-card {
     position: relative;
-    width: 150px; 
-    height: 150px; 
+    width: 140px; 
+    height: 140px; 
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -205,7 +231,7 @@ footer {
 }
 
 .skill-icon {
-    width: 70px; 
+    width: 60px; 
     height: auto;
 }
 
