--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,7 @@
 /* Global Styles */
+html{
+    scroll-behavior: smooth;
+}
 body {
     font-family: 'Arial', sans-serif;
     background-color: #1c1c1c;
