--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,9 @@
 /* Global Styles */
-html{
+html {
     scroll-behavior: smooth;
 }
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: "Arial", sans-serif;
     background-color: #1c1c1c;
     color: #f0f0f0;
     margin: 0;
@@ -65,7 +65,8 @@ a:hover {
 
 /* Animation Keyframes */
 @keyframes jump {
-    0%, 100% {
+    0%,
+    100% {
         transform: translateY(0);
     }
     50% {
@@ -113,7 +114,7 @@ footer {
     display: flex;
     padding: 5px;
     align-items: center;
-    transition: color 0.3s ease; /* Adding transition for smoother hover effect */
+    transition: color 0.3s ease;
 }
 
 .contact-info a:hover {
@@ -138,19 +139,22 @@ footer {
     right: 0;
     top: 45%;
     z-index: 1;
-    display: flex; 
+    display: flex;
     flex-direction: column;
 }
 
 .side-nav img {
-    height: 60px; 
-    width: 60px; 
+    height: 60px;
+    width: 60px;
     margin-bottom: 15px;
     background-color: #333;
     padding: 10px 50px;
     border-radius: 20px 0 0 20px;
-    transition: transform 0.2s ease-out, background-color 0.3s ease; 
-    transform-origin: right center; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition:
+        transform 0.2s ease-out,
+        background-color 0.3s ease;
+    transform-origin: right center;
 }
 
 .side-nav img:hover {
@@ -175,8 +179,11 @@ footer {
     background-color: #333;
     padding: 10px 20px;
     border-radius: 0 20px 20px 0;
-    transition: transform 0.2s ease-out, background-color 0.3s ease; 
-    transform-origin: left center; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition:
+        transform 0.2s ease-out,
+        background-color 0.3s ease;
+    transform-origin: left center;
 }
 
 .side-nav-left p:hover {
@@ -186,7 +193,101 @@ footer {
     box-shadow: 0 5px #9b7aff;
 }
 
-/* Responsive Design */
+/* Skills Container */
+.skills-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.skill-card {
+    position: relative;
+    width: 140px;
+    height: 140px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition:
+        transform 0.3s ease,
+        box-shadow 0.3s ease;
+}
+
+.skill-card:hover,
+.skill-card.pulsating {
+    transform: scale(1.3);
+}
+
+.skill-icon {
+    width: 60px;
+    height: auto;
+}
+
+.skill-name {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    font-size: 1.2rem;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.skill-card:hover .skill-name {
+    opacity: 1;
+}
+
+.skill-card.pulsating .skill-name {
+    animation: fade 3s infinite;
+}
+
+@keyframes fade {
+    0%,
+    100% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+}
+
+@keyframes pulsate {
+    0%,
+    100% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.3);
+    }
+}
+
+/* Pulsating Class */
+.pulsating {
+    animation: pulsate 3s ease-in-out infinite;
+    transition: none;
+}
+
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+.card {
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    border-radius: 15px;
+    padding: 20px;
+    transition: transform 0.3s;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+/* Responsive adjustments for smaller screens */
 @media (max-width: 767px) {
     .container {
         width: 90%;
@@ -203,88 +304,14 @@ footer {
     }
 }
 
-/* Skills Container */
-.skills-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 20px 0;
-}
-
-.skill-card {
-    position: relative;
-    width: 140px; 
-    height: 140px; 
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.skill-card:hover, 
-.skill-card.pulsating  {
-    transform: scale(1.3);
-}
-
-.skill-icon {
-    width: 60px; 
-    height: auto;
-}
-
-.skill-name {
-    position: absolute;
-    bottom: 10px; 
-    left: 50%;
-    transform: translateX(-50%);
-    color: white;
-    font-size: 1.2rem;
-    opacity: 0; 
-    transition: opacity 0.3s ease;
-}
-
-.skill-card:hover .skill-name {
-    opacity: 1; 
-}
-
-.skill-card.pulsating .skill-name {
-    animation: fade 3s infinite;
-}
-
-@keyframes fade {
-    0%, 100% {
-        opacity: 0; 
-    }
-    50% {
-        opacity: 1; 
-    }
-}
-
-@keyframes pulsate {
-    0%, 100% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1.3);
-    }
-}
-
-/* Pulsating Class */
-.pulsating {
-    animation: pulsate 3s ease-in-out infinite;
-    transition: none;
-}
-
-/* Responsive adjustments for smaller screens */
-
 @media (max-width: 814px) {
-    .side-nav{
+    .side-nav {
         top: 60%;
     }
-    .side-nav img {
 
-        height: 40px; 
-        width: 40px; 
+    .side-nav img {
+        height: 40px;
+        width: 40px;
         margin-bottom: 10px;
         padding: 10px 30px;
     }
@@ -292,17 +319,18 @@ footer {
     .side-nav-left p {
         font-size: 1.75rem;
     }
-    
-    h1{
+
+    h1 {
         font-size: 2rem;
     }
+
     .skill-icon {
-        width: 40px; 
+        width: 40px;
         height: auto;
     }
 
     .skill-card {
-        width: 80px; 
+        width: 80px;
         height: 80px;
     }
 
@@ -311,4 +339,7 @@ footer {
         bottom: 0;
     }
 
+    .card-container {
+        grid-template-columns: 1fr;
+    }
 }
