--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,7 @@
 /* Global Styles */
 html {
     scroll-behavior: smooth;
+    scroll-padding-top: 60px;
 }
 body {
     font-family: "Arial", sans-serif;
@@ -55,13 +56,7 @@ a:hover {
     padding: 20px;
 }
 
-#canvas-container {
-    display: block;
-    width: 100%;
-    height: 400px;
-    border: 2px dashed #5d5a5a;
-    margin: auto;
-}
+
 
 /* Animation Keyframes */
 @keyframes jump {
@@ -87,54 +82,9 @@ a:hover {
     animation-delay: calc(0.1s * var(--i));
 }
 
-/* Footer Styles */
-footer {
-    background-color: #333;
-    padding: 10px;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
-}
-
-/* Contact Info Styles */
-.contact-info {
-    display: flex;
-    gap: 20px; /* Space between icons */
-    justify-content: center;
-    align-items: center;
-}
-
-.contact-info p {
-    margin: 0;
-}
-
-.contact-info a {
-    display: flex;
-    padding: 5px;
-    align-items: center;
-    transition: color 0.3s ease;
-}
-
-.contact-info a:hover {
-    color: #fff;
-    background-color: #555;
-    border-radius: 3px;
-}
-
-.contact-icon {
-    width: 32px;
-    height: 32px;
-    transition: transform 0.3s ease;
-}
-
-.contact-icon:hover {
-    transform: scale(1.1);
-}
 
 /* Side Navigation Styles */
-.side-nav {
+.side-nav-right {
     position: fixed;
     right: 0;
     top: 45%;
@@ -143,12 +93,12 @@ footer {
     flex-direction: column;
 }
 
-.side-nav img {
+.side-nav-right img {
     height: 60px;
     width: 60px;
     margin-bottom: 15px;
     background-color: #333;
-    padding: 10px 50px;
+    padding: 10px 40px;
     border-radius: 20px 0 0 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition:
@@ -157,12 +107,12 @@ footer {
     transform-origin: right center;
 }
 
-.side-nav img:hover {
+.side-nav-right img:hover {
     color: #9b7aff;
     border-top: 1px solid #555;
     transform: scale(1.3);
     box-shadow: 0 5px #9b7aff;
-}
+} 
 
 .side-nav-left {
     position: fixed;
@@ -170,12 +120,14 @@ footer {
     top: 10%;
     z-index: 1;
     text-align: right;
+    display: flex;
+    flex-direction: column;
 }
 
 .side-nav-left p {
     font-size: 2.25rem;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 17px;
     background-color: #333;
     padding: 10px 20px;
     border-radius: 0 20px 20px 0;
@@ -193,6 +145,26 @@ footer {
     box-shadow: 0 5px #9b7aff;
 }
 
+.side-nav-left img {
+    height: 60px;
+    width: 60px;
+    margin-bottom: 15px;
+    background-color: #333;
+    padding: 10px 20px;
+    border-radius:  0 20px 20px 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition:
+        transform 0.2s ease-out,
+        background-color 0.3s ease;
+    transform-origin: left center;
+}
+
+.side-nav-left img:hover {
+    color: #9b7aff;
+    border-top: 1px solid #555;
+    transform: scale(1.3);
+    box-shadow: 0 5px #9b7aff;
+} 
 /* Skills Container */
 .skills-container {
     display: flex;
@@ -270,9 +242,11 @@ footer {
 }
 
 .card-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+    display: flex;
+    flex-wrap: wrap; 
+    align-items: flex-start; 
+    gap: 20px; 
+    
 }
 
 .card {
@@ -287,10 +261,19 @@ footer {
     transform: scale(1.05);
 }
 
+#canvas-container {
+    width: 500px;
+    height: 400px;
+}
+
 /* Responsive adjustments for smaller screens */
 @media (max-width: 767px) {
     .container {
         width: 90%;
+    }
+    #canvas-container {
+        width: 400px;
+        height: 300px;
     }
 }
 
@@ -300,16 +283,17 @@ footer {
     }
 
     #canvas-container {
-        height: 300px;
+        height: 200px;
+        width: 300px;
     }
 }
 
 @media (max-width: 814px) {
-    .side-nav {
+    .side-nav-right {
         top: 60%;
     }
 
-    .side-nav img {
+    .side-nav-right img {
         height: 40px;
         width: 40px;
         margin-bottom: 10px;
@@ -339,7 +323,24 @@ footer {
         bottom: 0;
     }
 
-    .card-container {
-        grid-template-columns: 1fr;
-    }
+}
+
+.clock-container {
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    border-radius: 10px; /* Rounded corners */
+    padding: 15px; /* Inner spacing */
+    text-align: center; /* Center the text */
+}
+
+#date {
+    font-family: 'Arial', sans-serif; /* Clean font for the date */
+    font-size: 16px; /* Smaller size for date */
+    color: #fff; /* White color */
+}
+
+#digital-clock {
+    font-family: 'Courier New', Courier, monospace; /* Digital font */
+    font-size: 28px; /* Larger size for time */
+    color: #00ff00; /* Green color for digital effect */
+    margin-top: 5px; /* Space between date and clock */
 }
